--- a/aula12/ex014/estilo.css
+++ b/aula12/ex014/estilo.css
@@ -4,10 +4,9 @@ body{
 
 }
 header{
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     text-align: center;
-
-
 }
 section{
     background: white;
