--- a/aulatreino/estilo.css
+++ b/aulatreino/estilo.css
@@ -17,11 +17,13 @@ section{
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.467);
 }
-#saldo{
+select#flista{
+    width: 150px
+}
+section#res{
     text-align: center;
     justify-content: space-between;
 }
-
 
 footer{
     color: white;
