--- a/aulatreino/estilo.css
+++ b/aulatreino/estilo.css
@@ -1,32 +1,99 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+    outline: none;
+}
 body{
-    background:rgb(63, 63, 227) ;
-    font: normal 15pt arial;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+main{
+    min-width: 550px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.resume{
+    display: flex;
+    padding: 10px 0;
+    gap: 40px;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
-header{
+.resume>div{
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0PX 0PX 5PX #ccc;
+    border-radius: 10PX;
+    padding: 10PX;
+    width: 150PX;
+}
+.newItem{
+    display: flex;
+    gap: 10px;
+    align-items: end;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.divDesc,.divType,.divAmount {
+    display: flex;
+    flex-direction: column;
+}
+.newItem> button{
+    background-color: blue;
     color: white;
+    border: none;
+    padding: 0 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 34px;
+}
+input,select{
+    padding: 5px;
+}
+.divTable{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+table{
+    width: 98%;
+    padding: 20px 0;
+    border-radius: 5px;
+}
+th{
+    text-align: start;
+    border-bottom: inset;
+    padding-bottom: 5px;
+}
+i{
+    font-size: 25px;
+}
+.bxs-chevron-up-circle{
+    color: #00C9A7;
+}
+.bxs-chevron-down-circle {
+    color: #D83121;
+}
+.coLummAction {
+    width: 40px;
     text-align: center;
-
-
 }
-section{
-    background: white;
-    border-radius: 10px;
-    padding: 15px;
-    width: 500px;
-    margin: auto;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.467);
+.coLummAction>button{
+    background: transparent;
+    border: none;
 }
-select#flista{
-    width: 150px
+.coLumnAmoumt{
+    width: 30%;
 }
-section#res{
+.coLumnType{
+    width: 80px;
     text-align: center;
-    justify-content: space-between;
-}
-
-footer{
-    color: white;
-    text-align: center;
-    font-style: italic;
 }
